--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>MemoDay</title>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.6.1/firebaseui.css"/>
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
 </head>
 <body>
 <noscript>
