--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,6 +6,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>MemoDay</title>
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="<%= BASE_URL %>/img/icons/apple-touch-icon-57x57.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="114x114"
+        href="<%= BASE_URL %>/img/icons/apple-touch-icon-114x114.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="<%= BASE_URL %>/img/icons/apple-touch-icon-72x72.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="144x144"
+        href="<%= BASE_URL %>/img/icons/apple-touch-icon-144x144.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="<%= BASE_URL %>/img/icons/apple-touch-icon-60x60.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="120x120"
+        href="<%= BASE_URL %>/img/icons/apple-touch-icon-120x120.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="<%= BASE_URL %>/img/icons/apple-touch-icon-76x76.png"/>
+  <link rel="apple-touch-icon-precomposed" sizes="152x152"
+        href="<%= BASE_URL %>/img/icons/apple-touch-icon-152x152.png"/>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-196x196.png" sizes="196x196"/>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-96x96.png" sizes="96x96"/>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-32x32.png" sizes="32x32"/>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-16x16.png" sizes="16x16"/>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-128.png" sizes="128x128"/>
+  <meta name="application-name" content="MemoDay"/>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.6.1/firebaseui.css"/>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
 </head>
