feat(design): support for theme color in chrome

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,7 @@
   <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-16x16.png" sizes="16x16"/>
   <link rel="icon" type="image/png" href="<%= BASE_URL %>/img/icons/favicon-128.png" sizes="128x128"/>
   <meta name="application-name" content="MemoDay"/>
+  <meta name="theme-color" content="#FF8882">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.6.1/firebaseui.css"/>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
 </head>
