--- a/web/public/index.html
+++ b/web/public/index.html
@@ -27,6 +27,17 @@
   <meta name="theme-color" content="#FF8882">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.6.1/firebaseui.css"/>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141778364-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'UA-141778364-1');
+  </script>
   <script>
     (function (h, o, t, j, a, r) {
       h.hj = h.hj || function () {
